Fixed some stuff and ported some c-apps to c++

--- a/user/c/dynlink/Makefile
+++ b/user/c/dynlink/Makefile
@@ -40,7 +40,8 @@ $(BUILDL)/%.o:		%.c
 
 $(BUILDL)/%.s.o:	%.s
 		@echo "	" AS $<
-		@$(AS) $(ASFLAGS) -o $@ $<
+		#@$(AS) $(ASFLAGS) --defsym CALLTRACE_PID=24 -o $@ $< -MD $(BUILDL)/startup.d
+		@$(AS) $(ASFLAGS) -o $@ $< -MD $(BUILDL)/startup.d
 
 -include $(DEPS)
 
