--- a/user/c/calc/Makefile
+++ b/user/c/calc/Makefile
@@ -10,7 +10,7 @@ APPCPY = $(BUILD)/apps/$(APP)
 
 CFLAGS = $(CDEFFLAGS) $(ADDFLAGS)
 ifeq ($(LINKTYPE),static)
-	CFLAGS += -Wl,-Bstatic
+	CFLAGS += -static -Wl,-Bstatic
 endif
 
 # sources
