--- a/user/c/dynlink/Makefile
+++ b/user/c/dynlink/Makefile
@@ -7,7 +7,7 @@ SUBDIRS = . $(filter-out Makefile $(wildcard *.*),$(wildcard *))
 BUILDDIRS = $(addprefix $(BUILDL)/,$(SUBDIRS))
 DEPS = $(shell find $(BUILDDIRS) -mindepth 0 -maxdepth 1 -name "*.d")
 
-CFLAGS = -Wl,-Bstatic -nostartfiles $(CDEFFLAGS) $(ADDFLAGS)
+CFLAGS = -static -Wl,-Bstatic -nostartfiles $(CDEFFLAGS) $(ADDFLAGS)
 
 # sources
 CSRC = $(shell find $(SUBDIRS) -mindepth 0 -maxdepth 1 -name "*.c")
@@ -25,7 +25,7 @@ all:	$(BUILDDIRS) $(BIN)
 
 $(BIN):	$(DEP_START) $(DEP_DEFLIBS) $(LDCONF) $(COBJ) $(START)
 		@echo "	" LINKING $(BIN)
-		@$(CC) $(CFLAGS) -Wl,-T,$(LDCONF) -o $(BIN) $(START) $(COBJ) -Wl,--start-group -lgcc -lc -Wl,--end-group
+		@$(CC) $(CFLAGS) -Wl,-T,$(LDCONF) -o $(BIN) $(START) $(COBJ)
 		@echo "	" COPYING ON DISK
 		$(ROOT)/tools/disk.sh copy $(BIN) /bin/$(NAME)
 
@@ -40,7 +40,7 @@ $(BUILDL)/%.o:		%.c
 
 $(BUILDL)/%.s.o:	%.s
 		@echo "	" AS $<
-		#@$(AS) $(ASFLAGS) --defsym CALLTRACE_PID=24 -o $@ $< -MD $(BUILDL)/startup.d
+		#@$(AS) $(ASFLAGS) --defsym CALLTRACE_PID=10 -o $@ $< -MD $(BUILDL)/startup.d
 		@$(AS) $(ASFLAGS) -o $@ $< -MD $(BUILDL)/startup.d
 
 -include $(DEPS)
