--- a/user/c/initloader/Makefile
+++ b/user/c/initloader/Makefile
@@ -8,7 +8,7 @@ SUBDIRS = . $(filter-out Makefile $(wildcard *.*),$(wildcard *))
 BUILDDIRS = $(addprefix $(BUILDL)/,$(SUBDIRS))
 DEPS = $(shell find $(BUILDDIRS) -mindepth 0 -maxdepth 1 -name "*.d")
 
-CFLAGS = -Wl,-Bstatic -nostartfiles $(CDEFFLAGS)
+CFLAGS = -static -Wl,-Bstatic -nostartfiles $(CDEFFLAGS)
 
 ASRC = $(wildcard *.s)
 AOBJ = $(patsubst %.s,$(BUILDL)/a%.o,$(ASRC))
