--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,15 +1,14 @@
-# TODO
-DIRS = c g m cpp gui shell vbe vterm
+DIRS = c g m cpp d gui shell vbe vterm
 
 .PHONY:  all clean
 
 all:
 		@for i in $(DIRS) ; do \
-			$(MAKE) $(JOBS) -C $$i all || { echo "Make: Error (`pwd`)"; exit 1; } ; \
+			$(MAKE) -C $$i all || { echo "Make: Error (`pwd`)"; exit 1; } ; \
 		done
 
 clean:
 		@for i in $(DIRS) ; do \
-			$(MAKE) $(JOBS) -C $$i clean || { echo "Make: Error (`pwd`)"; exit 1; } ; \
+			$(MAKE) -C $$i clean || { echo "Make: Error (`pwd`)"; exit 1; } ; \
 		done
 		rm -f *~
