--- a/user/Makefile
+++ b/user/Makefile
@@ -1,15 +1,14 @@
-# TODO
-DIRS = $(filter-out $(wildcard *.*) d Makefile,$(wildcard *))
+DIRS = $(filter-out $(wildcard *.*) Makefile,$(wildcard *))
 
 .PHONY:  all clean
 
 all:
 		@for i in $(DIRS) ; do \
-			$(MAKE) $(JOBS) -C $$i all || { echo "Make: Error (`pwd`)"; exit 1; } ; \
+			$(MAKE) -C $$i all || { echo "Make: Error (`pwd`)"; exit 1; } ; \
 		done
 
 clean:
 		@for i in $(DIRS) ; do \
-			$(MAKE) $(JOBS) -C $$i clean || { echo "Make: Error (`pwd`)"; exit 1; } ; \
+			$(MAKE) -C $$i clean || { echo "Make: Error (`pwd`)"; exit 1; } ; \
 		done
 		rm -f *~
