--- a/bochsgdb.cfg
+++ b/bochsgdb.cfg
@@ -7,14 +7,13 @@ romimage: file="/usr/local/share/bochs/BIOS-bochs-latest", address=0x00000
 vgaromimage: file="/usr/share/vgabios/vgabios.bin"
 #vgaromimage: file="/usr/local/share/bochs/VGABIOS-lgpl-latest.debug.bin"
 boot: disk
-floppya: 1_44="build/debug/disk.img", status=inserted
+#floppya: 1_44="build/debug/disk.img", status=inserted
 # no floppyb
 ata0: enabled=1, ioaddr1=0x1f0, ioaddr2=0x3f0, irq=14
 ata0-master: type=disk, path=/home/hrniels/escape/source/build/debug/hd.img, translation=none
 #ata0-slave: type=disk, path=build/debug/hd.img, mode=flat, cylinders=40, heads=16, spt=63, translation=none
-#ata0-master: type=cdrom, path=/home/hrniels/Data/Apps/damnsmalllinux/dsl-4.2.5.iso, status=inserted
 ata1: enabled=1, ioaddr1=0x170, ioaddr2=0x370, irq=15
-#ata1-master: type=cdrom, path=build/debug/cd.iso, status=inserted
+ata1-master: type=cdrom, path=/home/hrniels/escape/source/build/debug/cd.iso, status=inserted
 ata2: enabled=0
 ata3: enabled=0
 port_e9_hack: enabled=1
