--- a/bochsgdb.cfg
+++ b/bochsgdb.cfg
@@ -6,7 +6,7 @@ megs: 60
 romimage: file="/usr/local/share/bochs/BIOS-bochs-latest", address=0x00000
 vgaromimage: file="/usr/share/vgabios/vgabios.bin"
 #vgaromimage: file="/usr/local/share/bochs/VGABIOS-lgpl-latest.debug.bin"
-boot: disk
+boot: cdrom
 #floppya: 1_44="build/debug/disk.img", status=inserted
 # no floppyb
 ata0: enabled=1, ioaddr1=0x1f0, ioaddr2=0x3f0, irq=14
