Improved the signal-handling, profiling (thread-based now) and various other things

--- a/bochs.cfg
+++ b/bochs.cfg
@@ -13,7 +13,7 @@ ata0: enabled=1, ioaddr1=0x1f0, ioaddr2=0x3f0, irq=14
 ata0-master: type=disk, path=/home/hrniels/escape/source/build/debug/hd.img, translation=none
 #ata0-slave: type=disk, path=build/debug/hd.img, mode=flat, cylinders=40, heads=16, spt=63, translation=none
 ata1: enabled=1, ioaddr1=0x170, ioaddr2=0x370, irq=15
-ata1-master: type=cdrom, path=/home/hrniels/escape/source/build/debug/cd.iso, status=inserted
+ata1-master: type=cdrom, path=/home/hrniels/escape/source/build/release/cd.iso, status=inserted
 ata2: enabled=0
 ata3: enabled=0
 port_e9_hack: enabled=1
@@ -44,7 +44,7 @@ pnic: enabled=0
 # no loader
 log: bochs.txt
 logprefix: %t%e%d
-#debugger_log: debug.txt
+debugger_log: debug.txt
 panic: action=fatal
 error: action=report
 info: action=report
