Working on eco32-port (x86 working atm)

--- a/.cproject
+++ b/.cproject
@@ -39,6 +39,9 @@
 								<option id="gnu.c.compiler.option.include.paths.1617888949" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" valueType="includePath">
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Escape/include}&quot;"/>
 								</option>
+								<option id="gnu.c.compiler.option.preprocessor.def.symbols.1628885044" superClass="gnu.c.compiler.option.preprocessor.def.symbols" valueType="definedSymbols">
+									<listOptionValue builtIn="false" value="__eco32__"/>
+								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.921234755" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 							</tool>
 							<tool id="cdt.managedbuild.tool.gnu.c.linker.exe.debug.787803597" name="GCC C Linker" superClass="cdt.managedbuild.tool.gnu.c.linker.exe.debug"/>
