--- a/user/Makefile
+++ b/user/Makefile
@@ -1,5 +1,8 @@
-DIRS = $(filter-out $(wildcard *.*) cpp d Makefile,$(wildcard *))
-#DIRS = $(filter-out $(wildcard *.*) d Makefile,$(wildcard *))
+ifeq ($(ARCH),eco32)
+	DIRS = $(filter-out $(wildcard *.*) cpp d Makefile,$(wildcard *))
+else
+	DIRS = $(filter-out $(wildcard *.*) d Makefile,$(wildcard *))
+endif
 
 .PHONY:  all clean
 
