--- a/source/user/cpp/Makefile
+++ b/source/user/cpp/Makefile
@@ -1,4 +1,8 @@
-DIRS = $(filter-out $(wildcard *.*) Makefile,$(wildcard *))
+ifeq ($(ARCH),eco32)
+	DIRS = $(filter-out $(wildcard *.*) guishell Makefile,$(wildcard *))
+else
+	DIRS = $(filter-out $(wildcard *.*) Makefile,$(wildcard *))
+endif
 
 .PHONY:  all clean
 
