--- a/source/kernel/test/Makefile
+++ b/source/kernel/test/Makefile
@@ -3,6 +3,7 @@ ROOT = ../..
 BUILDK = $(BUILD)/kernel/src
 BUILDT = $(BUILD)/kernel/test
 BIN = $(BUILD)/kernel_test.bin
+MAP = $(BUILD)/kernel_test.map
 LDCONF = ../src/arch/$(ARCH)/ld.conf
 LIB = $(ROOT)/lib/basic
 DEPS = $(wildcard $(BUILDT)/*.d)
@@ -25,12 +26,14 @@ KASRC += $(shell find ../src/arch/$(ARCH) -name "*.s" | grep -v '\.svn')
 LSRC = $(filter-out $(shell find $(LIB)/arch -name "*.c"),\
 	$(shell find $(LIB) -name "*.c" | grep -v '\.svn'))
 LSRC += $(shell find $(LIB)/arch/$(ARCH) -name "*.c" | grep -v '\.svn')
+LASRC = $(shell find $(LIB)/arch/$(ARCH) -name "*.s" | grep -v '\.svn')
 
 # objects
 TOBJ = $(patsubst %.c,$(BUILDT)/%.o,$(TSRC))
 KOBJ = $(patsubst %.c,$(BUILDK)/%.o,$(KSRC))
 KAOBJ = $(patsubst %.s,$(BUILDK)/%.s.o,$(KASRC))
 LOBJ = $(patsubst $(LIB)/%.c,$(BUILDT)/lib/%.o,$(LSRC))
+LAOBJ = $(patsubst $(LIB)/%.s,$(BUILDT)/lib/%.s.o,$(LASRC))
 
 SYMBOLS = $(BUILD)/kernelt_symbols.txt
 SYMBOLSCRIPT = $(ROOT)/tools/gensymbols.sh
@@ -39,11 +42,11 @@ SYMBOLOBJ = $(patsubst ../src/%.c,$(BUILDT)/%.o,$(SYMBOLSRC))
 
 .PHONY: all pre clean
 
-all: $(BIN)
+all: $(BIN) $(MAP)
 
-$(BIN):	$(BUILDDIRS) $(LDCONF) $(KAOBJ) $(KOBJ) $(TOBJ) $(LOBJ)
+$(BIN):	$(BUILDDIRS) $(LDCONF) $(KAOBJ) $(KOBJ) $(TOBJ) $(LOBJ) $(LAOBJ)
 		@echo "	" LINKING $(BIN)
-		@$(CC) $(CFLAGS) -Wl,-T,$(LDCONF) -o $(BIN) $(KAOBJ) $(KOBJ) $(TOBJ) $(LOBJ) -lgcc;
+		@$(CC) $(CFLAGS) -Wl,-T,$(LDCONF) -o $(BIN) $(KAOBJ) $(KOBJ) $(TOBJ) $(LOBJ) $(LAOBJ) -lgcc;
 		@# Note that we link 2 additional times because otherwise the symbol-table is incorrect
 		@# since it's size is 0 at the first time. In the second pass the size is correct
 		@# and therefore the symbol-table will be generated correctly in the third pass :)
@@ -52,13 +55,17 @@ $(BIN):	$(BUILDDIRS) $(LDCONF) $(KAOBJ) $(KOBJ) $(TOBJ) $(LOBJ)
 		@echo "	" CC $(SYMBOLSRC)
 		@$(CC) $(CFLAGS) -o $(SYMBOLOBJ) -c $(SYMBOLSRC)
 		@echo "	" LINKING $(BIN)
-		@$(CC) $(CFLAGS) -Wl,-T,$(LDCONF) -o $(BIN) $(KAOBJ) $(KOBJ) $(TOBJ) $(LOBJ) -lgcc;
+		@$(CC) $(CFLAGS) -Wl,-T,$(LDCONF) -o $(BIN) $(KAOBJ) $(KOBJ) $(TOBJ) $(LOBJ) $(LAOBJ) -lgcc;
 		@echo "	" BUILDING SYMBOL-FILE
 		@$(SYMBOLSCRIPT) $(BIN) > $(SYMBOLS)
 		@echo "	" CC $(SYMBOLSRC)
 		@$(CC) $(CFLAGS) -o $(SYMBOLOBJ) -c $(SYMBOLSRC)
 		@echo "	" LINKING $(BIN)
-		@$(CC) $(CFLAGS) -Wl,-T,$(LDCONF) -o $(BIN) $(KAOBJ) $(KOBJ) $(TOBJ) $(LOBJ) -lgcc;
+		@$(CC) $(CFLAGS) -Wl,-T,$(LDCONF) -o $(BIN) $(KAOBJ) $(KOBJ) $(TOBJ) $(LOBJ) $(LAOBJ) -lgcc;
+
+$(MAP): $(BIN)
+		@echo "	" GEN MAP $@
+		@$(NM) -S $(BIN) | $(ROOT)/tools/createmap-mmix.php > $@
 
 $(BUILDDIRS):
 		@for i in $(BUILDDIRS); do \
@@ -73,8 +80,12 @@ $(BUILDT)/lib/%.o:	$(LIB)/%.c
 		@echo "	" CC $<
 		@$(CC) $(CFLAGS) -o $@ -c $< -MD
 
+$(BUILDT)/lib/%.s.o:	$(LIB)/%.s
+		@echo "	" AS $<
+		@$(AS) $(ASFLAGS) -o $@ $<
+
 -include $(DEPS)
 
 clean:
 		@echo "===== REMOVING FILES =====";
-		rm -f $(DEPS) $(BIN) $(TOBJ) $(LOBJ) $(SYMBOLS) $(SYMBOLOBJ);
+		rm -f $(DEPS) $(BIN) $(MAP) $(TOBJ) $(LOBJ) $(LAOBJ) $(SYMBOLS) $(SYMBOLOBJ);
