--- a/source/Makefile
+++ b/source/Makefile
@@ -183,7 +183,7 @@ mmixd:	all hdd
 
 eco:	all hdd prepareRun
 		$(ECOSIM) -r $(ECOMON) -t 1 -d $(HDD) -o log.txt -c -i \
-			-m $(BUILD)/kernel.map -n
+			-m $(BUILD)/kernel.map $(BUILD)/driver_fs.map -n
 
 teste:	all hdd prepareTest
 		$(ECOSIM) -r $(ECOMON) -t 1 -d $(HDD) -o log.txt -c -i \
