Improved a few things (flush page-tables, event-system without heap, ...)

--- a/source/Makefile
+++ b/source/Makefile
@@ -6,7 +6,7 @@
 ARCH = eco32
 GCCVER = 4.4.3
 TARGET = $(ARCH)-elf-escape
-BUILDDIR = $(abspath build/$(ARCH)-debug)
+BUILDDIR = $(abspath build/$(ARCH)-release)
 DIST = ../toolchain/$(ARCH)
 DISKMOUNT = diskmnt
 HDD = $(BUILDDIR)/hd.img
