--- a/source/user/c/dynlink/Makefile
+++ b/source/user/c/dynlink/Makefile
@@ -3,14 +3,14 @@ ROOT = ../../..
 BUILDL = $(BUILD)/user/c/$(NAME)
 BIN = $(BUILD)/user_$(NAME).bin
 LDCONF = ld.conf
-SUBDIRS = . $(filter-out Makefile $(wildcard *.*),$(wildcard *))
+SUBDIRS = $(shell find . -type d | grep -v '\.svn')
 BUILDDIRS = $(addprefix $(BUILDL)/,$(SUBDIRS))
-DEPS = $(shell find $(BUILDDIRS) -mindepth 0 -maxdepth 1 -name "*.d")
+DEPS = $(shell find $(BUILDL) -name "*.d")
 
 CFLAGS = -static -Wl,-Bstatic -nostartfiles $(CDEFFLAGS) $(ADDFLAGS)
 
 # sources
-CSRC = $(shell find $(SUBDIRS) -mindepth 0 -maxdepth 1 -name "*.c")
+CSRC = $(shell find . -name "*.c")
 ASTART = startup.s
 
 # objects
@@ -37,9 +37,12 @@ $(BUILDL)/%.o:		%.c
 		@$(CC) $(CFLAGS) -o $@ -c $< -MD
 
 $(BUILDL)/%.s.o:	%.s
+		@echo "	" CPP $<
+		@$(CPP) -MD -MT $@ -MF $@.d $< > $@.tmp
 		@echo "	" AS $<
-		#@$(AS) $(ASFLAGS) --defsym CALLTRACE_PID=10 -o $@ $< -MD $(BUILDL)/startup.d
-		@$(AS) $(ASFLAGS) -o $@ $< -MD $(BUILDL)/startup.d
+		#@$(AS) $(ASFLAGS) --defsym CALLTRACE_PID=10 -o $@ $@.tmp
+		@$(AS) $(ASFLAGS) -o $@ $@.tmp
+		@rm -f $@.tmp
 
 -include $(DEPS)
 
