--- a/source/lib/c/Makefile
+++ b/source/lib/c/Makefile
@@ -1,10 +1,10 @@
 ROOT = ../..
 BUILDL = $(BUILD)/lib/c
 LIBDIR = $(ROOT)/lib/basic
-SUBDIRS = $(shell find . -type d)
-LSUBDIRS = $(shell find $(LIBDIR) -type d)
+SUBDIRS = $(shell find . -type d | grep -v '\.svn')
+LSUBDIRS = $(shell find $(LIBDIR) -type d | grep -v '\.svn')
 BUILDDIRS = $(addprefix $(BUILDL)/,$(SUBDIRS)) $(patsubst $(LIBDIR)/%,$(BUILDL)/lib/%,$(LSUBDIRS))
-DEPS = $(shell find $(BUILDDIRS) -name "*.d")
+DEPS = $(shell find $(BUILDL) -name "*.d")
 STLIB = $(BUILD)/libc.a
 
 ifneq ($(LINKTYPE),static)
@@ -19,11 +19,11 @@ endif
 
 # sources
 START = $(wildcard ./arch/$(ARCH)/crt*.s)
-SYSCALLS = arch/$(ARCH)/syscalls.s
+SYSCALLS = ./arch/$(ARCH)/syscalls.s
 CSRC = $(filter-out $(shell find ./arch -name "*.c"),$(shell find . -name "*.c"))
 CSRC += $(shell find ./arch/$(ARCH) -name "*.c")
 ASRC = $(filter-out $(shell find ./arch -name "*.s"),$(shell find . -name "*.s"))
-ASRC += $(filter-out $(START),$(shell find ./arch/$(ARCH) -name "*.s"))
+ASRC += $(filter-out $(SYSCALLS) $(START),$(shell find ./arch/$(ARCH) -name "*.s"))
 LSRC = $(filter-out $(shell find $(LIBDIR)/arch -name "*.c"),$(shell find $(LIBDIR) -name "*.c"))
 LSRC += $(shell find $(LIBDIR)/arch/$(ARCH) -name "*.c")
 LASRC = $(shell find $(LIBDIR)/arch/$(ARCH) -name "*.s")
@@ -68,14 +68,6 @@ $(BUILDL)/%_pic.o: %.c
 		@echo "	" CC $<
 		@$(CC) $(CFLAGS) -fPIC -o $@ -c $< -MD
 
-$(BUILDL)/%_pic.s.o: %.s $(SYSCALLS)
-		@echo "	" AS $<
-		@$(AS) $(ASFLAGS) --defsym SHAREDLIB=1 -o $@ $<
-
-$(BUILDL)/%.s.o: %.s $(SYSCALLS)
-		@echo "	" AS $<
-		@$(AS) $(ASFLAGS) -o $@ $<
-
 $(BUILDL)/lib/%.o:	$(LIBDIR)/%.c
 		@echo "	" CC $<
 		@$(CC) $(CFLAGS) -o $@ -c $< -MD
@@ -84,23 +76,49 @@ $(BUILDL)/lib/%_pic.o:	$(LIBDIR)/%.c
 		@echo "	" CC $<
 		@$(CC) $(CFLAGS) -fPIC -o $@ -c $< -MD
 
-$(BUILDL)/lib/%_pic.s.o: $(LIBDIR)/%.s
+$(BUILDL)/%_pic.s.o: %.s
+		@echo "	" CPP $<
+		@$(CPP) -MD -MT $@ -MF $@.d $< > $@.tmp
 		@echo "	" AS $<
-		@$(AS) $(ASFLAGS) --defsym SHAREDLIB=1 -o $@ $<
+		@$(AS) $(ASFLAGS) --defsym SHAREDLIB=1 -o $@ $@.tmp
+		@rm -f $@.tmp
+
+$(BUILDL)/%.s.o: %.s
+		@echo "	" CPP $<
+		@$(CPP) -MD -MT $@ -MF $@.d $< > $@.tmp
+		@echo "	" AS $<
+		@$(AS) $(ASFLAGS) -o $@ $@.tmp
+		@#rm -f $@.tmp
+
+$(BUILDL)/lib/%_pic.s.o: $(LIBDIR)/%.s
+		@echo "	" CPP $<
+		@$(CPP) -MD -MT $@ -MF $@.d $< > $@.tmp
+		@echo "	" AS $<
+		@$(AS) $(ASFLAGS) --defsym SHAREDLIB=1 -o $@ $@.tmp
+		@rm -f $@.tmp
 
 $(BUILDL)/lib/%.s.o: $(LIBDIR)/%.s
+		@echo "	" CPP $<
+		@$(CPP) -MD -MT $@ -MF $@.d $< > $@.tmp
 		@echo "	" AS $<
-		@$(AS) $(ASFLAGS) -o $@ $<
+		@$(AS) $(ASFLAGS) -o $@ $@.tmp
+		@rm -f $@.tmp
 
 $(BUILD)/crt%S.o : arch/$(ARCH)/crt%.s
+		@echo "	" CPP $<
+		@$(CPP) -MD -MT $@ -MF $(patsubst $(BUILD)/%.o,$(BUILDL)/%.o.d,$@) $< > $@.tmp
 		@echo "	" AS $<
-		@$(AS) $(ASFLAGS) -defsym SHAREDLIB=1 -o $@ $<
+		@$(AS) $(ASFLAGS) -defsym SHAREDLIB=1 -o $@ $@.tmp
 		@$(ROOT)/tools/linklib.sh $@
+		@rm -f $@.tmp
 
 $(BUILD)/crt%.o : arch/$(ARCH)/crt%.s
+		@echo "	" CPP $<
+		@$(CPP) -MD -MT $@ -MF $(patsubst $(BUILD)/%.o,$(BUILDL)/%.o.d,$@) $< > $@.tmp
 		@echo "	" AS $<
-		@$(AS) $(ASFLAGS) -o $@ $<
+		@$(AS) $(ASFLAGS) -o $@ $@.tmp
 		@$(ROOT)/tools/linklib.sh $@
+		@rm -f $@.tmp
 
 -include $(DEPS)
 
