--- a/source/kernel/src/arch/mmix/ld.conf
+++ b/source/kernel/src/arch/mmix/ld.conf
@@ -3,13 +3,21 @@ ENTRY(start)
 
 SECTIONS
 {
-	. = 0x8000000000100000;
+	. = 0x8000000000000000;
 	
-	.text : AT( ADDR(.text) - 0x8000000000100000 )
+	.text : AT(ADDR(.text) - 0x8000000000000000)
 	{
 		*(.text)
+	}
+	
+	.data ALIGN (4096) : AT(ADDR(.data) - 0x8000000000000000)
+	{
 		*(.data)
 		*(.rodata*)
+	}
+
+	.bss ALIGN (4096) : AT(ADDR(.bss) - 0x8000000000000000)
+	{
 		*(COMMON*)
 		*(.bss*)
 	}
